--- a/wordpress/vr/css/tooltip.css
+++ b/wordpress/vr/css/tooltip.css
@@ -102,9 +102,9 @@
   z-index: -1;
   left: 0;
   top: 0;
-  width: 70px;
-  height: 70px;
-  border: 5px solid white;
+  width: 60px;
+  height: 60px;
+  border: 3px solid white;
   border-radius: 50%;
   animation-name: pulse;
   animation-duration: 1s;
@@ -115,7 +115,7 @@
 }
 
 .tooltip.viewed .pulse {
-  border: 5px solid #ffffff80;
+  border: 3px solid #ffffff80;
 }
 
 @-webkit-keyframes pulse {
@@ -143,24 +143,23 @@
 .tooltip .out {
   position: relative;
   z-index: 2;
-  width: 70px;
-  height: 70px;
-  padding: 15px;
-  border: 5px solid white;
+  width: 60px;
+  height: 60px;
+  padding: 18px;
+  border: 3px solid white;
   border-radius: 50%;
   cursor: pointer;
   transition: border .3s ease-in-out;
 }
 
 .tooltip.viewed .out {
-  border: 5px solid #ffffff80;
+  border: 3px solid #ffffff80;
 }
 
 .tooltip .in {
   width: 100%;
   height: 100%;
   background-color: white;
-  padding: 15px;
   border-radius: 50%;
   color: #444;
   text-align: center;
@@ -175,7 +174,7 @@
 }
 
 .out:hover {
-  border: 5px solid #909090;
+  border: 3px solid #909090;
 }
 
 .out:hover .in {
@@ -183,7 +182,7 @@
 }
 
 .tooltip.viewed .out:hover {
-  border: 5px solid #90909080;
+  border: 3px solid #90909080;
 }
 
 .tooltip.viewed .out:hover .in {
